# Myopic_Delirium_6

./: .gitignore  LICENSE  README.md  REDESIGN_PLAN.md  analyze_hydration.py  debug_band1_decisions.py  demo_survival.py  fast_migration_viz.py  pyproject.toml  quick_migration_summary.py  requirements.txt  show_initial_state.py  test_extreme_tradeoff.py  test_forced_migration.py  test_forced_tradeoff.py  test_homeostatic_system.py  test_long_migration.py  test_migration_quick.py  test_multi_resource.py  test_trajectories.py  test_true_tradeoff.py  test_true_tradeoff_simple.py  test_well_fed_agents.py  visualize_agent_migration.py  visualize_band1_migration.py
docs/: API_REFERENCE.md  BANDED_AGENT_DESIGN.md  DEVELOPMENT_STATUS.md  TUNING.md
examples/: basic_agent.py
interfaces/agent_iface/: agent_manager.py  arbiter.py  band.py  band_physiological.py  banded_agent.py  base_agent.py  simulation.py
interfaces/ui_iface/runner/: agent_api.py  cli.py  engine.py  hydrator.py  initgen.py  kernels.py  predators.py  registry.py  viz.py
interfaces/ui_iface/scenarios/: env-b.yaml  tradeoff-env.yaml
interfaces/ui_iface/schemas/: schema.py
tests/: test_agent_api.py  test_artifacts.py  test_banded_survival.py  test_determinism.py  test_field_quality.py  test_hydrator.py  test_minimal_agent.py
